# yuv_ffi

./: .gitignore  LICENSE  README.md  ffigen.yaml  pubspec.yaml
src/: CMakeLists.txt  yuv_ffi.c  yuv_ffi.h
src/yuv/: bgra8888.c  bgra8888.h  gauss.c  gauss.h  log.h  nv21.c  nv21.h  yuv.c  yuv.h  yuv420.c  yuv420.h  yuv_utils.h
src/yuv/bgra8888/: bgra8888_blackwhite.c  bgra8888_box_blur.c  bgra8888_crop.c  bgra8888_flip.c  bgra8888_from_rgba.c  bgra8888_gaussblur.c  bgra8888_grayscale.c  bgra8888_mean_blur.c  bgra8888_negate.c  bgra8888_rotate.c  bgra8888_to_i420.c  bgra8888_to_nv21.c
src/yuv/bgra8888/h/: bgra8888_blackwhite.h  bgra8888_box_blur.h  bgra8888_crop.h  bgra8888_flip.h  bgra8888_from_rgba.h  bgra8888_gaussblur.h  bgra8888_grayscale.h  bgra8888_mean_blur.h  bgra8888_negate.h  bgra8888_rotate.h  bgra8888_to_i420.h  bgra8888_to_nv21.h
src/yuv/nv21/: nv21_blackwhite.c  nv21_box_blur.c  nv21_crop.c  nv21_flip.c  nv21_from_rgba8888.c  nv21_gaussblur.c  nv21_grayscale.c  nv21_mean_blur.c  nv21_negate.c  nv21_rotate.c  nv21_to_420.c  nv21_to_bgra8888.c  nv21_to_nv12.c  nv21_to_rgb.c
src/yuv/nv21/h/: nv21_blackwhite.h  nv21_box_blur.h  nv21_crop.h  nv21_flip.h  nv21_from_rgba8888.h  nv21_gaussblur.h  nv21_grayscale.h  nv21_mean_blur.h  nv21_negate.h  nv21_rotate.h  nv21_to_420.h  nv21_to_bgra8888.h  nv21_to_nv12.h  (+1 more)
src/yuv/yuv420/: yuv420_blackwhite.c  yuv420_box_blur.c  yuv420_crop.c  yuv420_flip.c  yuv420_from_rgba.c  yuv420_gaussblur.c  yuv420_grayscale.c  yuv420_mean_blur.c  yuv420_negate.c  yuv420_rotate.c  yuv420_to_bgra.c  yuv420_to_nv21.c
(+82 files in other folders)
